--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Admin Dashboard</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' href='style.css'>
-    <script src='script.js' defer></script>
-</head>
-<body>
-    
-</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="header">
+        <div class="header-content">
+          <div class="search-bar">
+            <label for="site-search"></label>
+            <input type="search" id="site-search" />
+          </div>
+          <div class="user-account"></div>
+        </div>
+      </div>
+      <div class="side-bar">Dashboard</div>
+      <div class="main">Your Projects</div>
+    </div>
+  </body>
 </html>
