Add nav to side bar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,58 @@
           <div class="user-account"></div>
         </div>
       </div>
-      <div class="side-bar">Dashboard</div>
+      <div class="side-bar">
+        <div class="side-bar-logo">
+          <img src="pictures/view-dashboard.png" alt="logo" /> Dashboard
+        </div>
+        <div class="nav">
+          <ul>
+            <li>
+              <img src="pictures/home-outline.png" alt="house" />
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <img
+                src="pictures/card-account-details-outline.png"
+                alt="account"
+              />
+              <a href="#">Profile</a>
+            </li>
+            <li>
+              <img src="pictures/message-outline.png" alt="message" />
+              <a href="#">Messages</a>
+            </li>
+            <li>
+              <img src="pictures/clock-outline.png" alt="clock" />
+              <a href="#">History</a>
+            </li>
+            <li>
+              <img src="pictures/folder-multiple-outline.png" alt="folder" />
+              <a href="#">Tasks</a>
+            </li>
+            <li>
+              <img src="pictures/account-group-outline.png" alt="account" />
+              <a href="#">Communities</a>
+            </li>
+          </ul>
+        </div>
+        <div class="nav-second">
+          <ul>
+            <li>
+              <img src="pictures/cog-outline.png" alt="cog" />
+              <a href="#">Settings</a>
+            </li>
+            <li>
+              <img src="pictures/comment-question-outline.png" alt="question" />
+              <a href="#">Support</a>
+            </li>
+            <li>
+              <img src="pictures/shield-account-outline.png" alt="shield" />
+              <a href="#">Privacy</a>
+            </li>
+          </ul>
+        </div>
+      </div>
       <div class="main">Your Projects</div>
     </div>
   </body>
