Add header content

--- a/index.html
+++ b/index.html
@@ -11,12 +11,30 @@
   <body>
     <div class="wrapper">
       <div class="header">
-        <div class="header-content">
-          <div class="search-bar">
-            <label for="site-search"></label>
-            <input type="search" id="site-search" />
+        <div class="search-bar">
+          <label for="site-search"
+            ><img src="pictures/magnify.png" alt="magnify"
+          /></label>
+          <input type="search" id="site-search" />
+        </div>
+        <div class="user-account">
+          <img src="pictures/bell-ring-outline.png" alt="bell" />
+          <div class="account">
+            <img src="pictures/account-circle-outline.png" alt="account" />
+            <p>Viteail</p>
           </div>
-          <div class="user-account"></div>
+        </div>
+        <div class="acc-welcome">
+          <img src="pictures/account-circle-outlinebig.png" alt="account">
+          <div class="welcome">
+            <p>Hello there,</p>
+            <p>Viteail (@viteail)</p>
+          </div>
+        </div>
+        <div class="btn-wrapper">
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
         </div>
       </div>
       <div class="side-bar">
