add cards to .main

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
         </div>
         <div class="acc-welcome">
-          <img src="pictures/account-circle-outlinebig.png" alt="account">
+          <img src="pictures/account-circle-outlinebig.png" alt="account" />
           <div class="welcome">
             <p>Hello there,</p>
             <p>Viteail (@viteail)</p>
@@ -89,7 +89,99 @@
           </ul>
         </div>
       </div>
-      <div class="main">Your Projects</div>
+      <div class="main">
+        <div class="heading1">
+          <div>Your Projects</div>
+        </div>
+        <div class="heading2">
+          <div>Announcements</div>
+        </div>
+        <div class="cards">
+          <div class="card">
+            <div class="text">
+              <div class="title">Beautiful Project</div>
+              <div class="para">
+                Malah sed tempus ut lacut ut secelerisque. Suspendusse
+                sollicitudin nibiiih erat, id facilisis felis accumsan nec.
+              </div>
+            </div>
+            <div class="icon">
+              <img src="pictures/star-plus-outline.png" alt="star">
+              <img src="pictures/eye-plus-outline.png" alt="eye">
+              <img src="pictures/share-variant-outline.png" alt="share">
+            </div>
+          </div>
+          <div class="card">
+            <div class="text">
+              <div class="title">Amazing Project</div>
+              <div class="para">
+                Malah sed tempus ut lacut ut secelerisque. Suspendusse
+                sollicitudin nibiiih erat, id facilisis felis accumsan nec.
+              </div>
+            </div>
+            <div class="icon">
+              <img src="pictures/star-plus-outline.png" alt="star">
+              <img src="pictures/eye-plus-outline.png" alt="eye">
+              <img src="pictures/share-variant-outline.png" alt="share">
+            </div>
+          </div>
+          <div class="card">
+            <div class="text">
+              <div class="title">Very serious Project</div>
+              <div class="para">
+                Malah sed tempus ut lacut ut secelerisque. Suspendusse
+                sollicitudin nibiiih erat, id facilisis felis accumsan nec.
+              </div>
+            </div>
+            <div class="icon">
+              <img src="pictures/star-plus-outline.png" alt="star">
+              <img src="pictures/eye-plus-outline.png" alt="eye">
+              <img src="pictures/share-variant-outline.png" alt="share">
+            </div>
+          </div>
+          <div class="card">
+            <div class="text">
+              <div class="title">Cool Project</div>
+              <div class="para">
+                Malah sed tempus ut lacut ut secelerisque. Suspendusse
+                sollicitudin nibiiih erat, id facilisis felis accumsan nec.
+              </div>
+            </div>
+            <div class="icon">
+              <img src="pictures/star-plus-outline.png" alt="star">
+              <img src="pictures/eye-plus-outline.png" alt="eye">
+              <img src="pictures/share-variant-outline.png" alt="share">
+            </div>
+          </div>
+          <div class="card">
+            <div class="text">
+              <div class="title">Not bad Project</div>
+              <div class="para">
+                Malah sed tempus ut lacut ut secelerisque. Suspendusse
+                sollicitudin nibiiih erat, id facilisis felis accumsan nec.
+              </div>
+            </div>
+            <div class="icon">
+              <img src="pictures/star-plus-outline.png" alt="star">
+              <img src="pictures/eye-plus-outline.png" alt="eye">
+              <img src="pictures/share-variant-outline.png" alt="share">
+            </div>
+          </div>
+          <div class="card">
+            <div class="text">
+              <div class="title">Just a Project</div>
+              <div class="para">
+                Malah sed tempus ut lacut ut secelerisque. Suspendusse
+                sollicitudin nibiiih erat, id facilisis felis accumsan nec.
+              </div>
+            </div>
+            <div class="icon">
+              <img src="pictures/star-plus-outline.png" alt="star">
+              <img src="pictures/eye-plus-outline.png" alt="eye">
+              <img src="pictures/share-variant-outline.png" alt="share">
+            </div>
+          </div>
+      </div>
     </div>
   </body>
 </html>
