Add Announcements and Trending content to .main

--- a/index.html
+++ b/index.html
@@ -182,6 +182,67 @@
             </div>
           </div>
       </div>
+      <div class="container-activity">
+        <div class="announcements">
+          <div class="announce1">
+          <div class="title">Site Maintenance</div>
+          <div class="para">Malah sed tempus ut lacut ut secelerisque. Suspendusse
+            sollicitudin nibiiih erat, id facilisis felis accumsan nec.
+          </div>
+        </div>
+        <div class="announce2">
+          <div class="title">Community Share Day</div>
+          <div class="para">Malah sed tempus ut lacut ut secelerisque. Suspendusse
+            sollicitudin nibiiih erat, id facilisis felis accumsan nec.
+          </div>
+        </div>
+        <div class="announce3">
+          <div class="title">Updated Privacy Policy</div>
+          <div class="para">Malah sed tempus ut lacut ut secelerisque. Suspendusse
+            sollicitudin nibiiih erat, id facilisis felis accumsan nec.
+          </div>
+        </div>
+        </div>
+        <div class="heading3">Trending</div>
+        <div class="trending">
+          <div class="person">
+            <div class="person-img">
+              <img src="pictures/account-circle-outline.png" alt="person">
+            </div>
+            <div class="name">
+              <p class="text-name">@zigan</p>
+              <p>Professional Farmer</p>
+            </div>
+          </div>
+          <div class="person">
+            <div class="person-img">
+              <img src="pictures/account-circle-outline.png" alt="person">
+            </div>
+            <div class="name">
+              <p class="text-name">@viktorr</p>
+              <p>Professional Engineer</p>
+            </div>
+          </div>
+          <div class="person">
+            <div class="person-img">
+              <img src="pictures/account-circle-outline.png" alt="person">
+            </div>
+            <div class="name">
+              <p class="text-name">@generals1</p>
+              <p>Military Power</p>
+            </div>
+          </div>
+          <div class="person">
+            <div class="person-img">
+              <img src="pictures/account-circle-outline.png" alt="person">
+            </div>
+            <div class="name">
+              <p class="text-name">@vitas</p>
+              <p>Professional Musician</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
